[workspace]

[package]
name = "lrtc"
authors = ["Mike Mahoney"]
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
license = "MIT"
keywords = ["machine-learning", "data-science", "text-classification"]
description = "ZSTD-based low-resource text classification as introduced in Jiang et al (2023)"
repository = "https://github.com/mikemahoney218/lrtc/"
categories = ["algorithms", "science"]
exclude = ["/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.12.4"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benchmark"
harness = false
