[workspace]

[package]
name = "lrtc"
authors = ["Mike Mahoney"]
version = "0.1.4"
edition = "2021"
rust-version = "1.70"
license = "MIT"
keywords = ["machine-learning", "data-science", "text-classification"]
description = "Compression-based low-resource text classification as introduced in Jiang et al (2023)"
repository = "https://github.com/mikemahoney218/lrtc/"
categories = ["algorithms", "science"]
exclude = ["/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.12.4"

[dev-dependencies]
criterion = "0.5.1"
csv = "1.2.2"

[[bench]]
name = "benchmark"
harness = false
